# alpaca-trading-scripts

./: .coveragerc  .editorconfig  .env.sample  .eslintignore  .eslintrc.js  .firebaserc  .flake8  .gitignore  .isort.cfg  .prettierignore  CHANGELOG.md  README.md  babel.config.js  ecosystem.config.js  global.d.ts  index.js  jest.config.js  main.py  mypy.ini  nodemon.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run.sh  setup.cfg  setup.py  tsconfig.eslint.json  tsconfig.json
.bin/: build  changelog  ci  clean  copy-env  create_tests  exclude.txt  release  restart  rsync  run  setup  setup-prod  test  validate
.bin/hooks/: pre-commit
.github/: settings.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  node.yml  pr-check.yml  python.yml
.husky/: pre-commit
__mocks__/@alpacahq/: alpaca-trade-api.js
data/: account.js  order-buy.js  orders-sell.js  positions.js
docs/: backtest-graph.html  backtest-results.md  backtest.html  script.pinescript  strategy.md
functions/: .eslintrc.js  index.js  package-lock.json  package.json
pinescripts/: sma-crossover.pinescript
scripts/: get-bars.js
src/: account.js  account.ts  alpaca-trading-script.ts  alpaca.js  alpaca.ts  bars.js  bars.ts  bars.ts.old  buy.js  clock.ts  constants.js  constants.ts  cron.ts  crypto.ts  getStockBars.ts  helpers.ts  index.ts  order.js  order.ts  position.ts  positions.js  sell.js  strategy.ts  types.d.ts
src/__fixtures__/: account.js  account.ts  bar.js  bars.ts  cryptoBars.ts  order.js  orders.ts  position.js  positions.ts  quote.js  quote.ts
src/__mocks__/: alpaca.js
src/__tests__/: account.spec.js  account.spec.ts  alpaca.spec.js  (+9 more)
tests/: conftest.py  requirements.txt  test_OrderCleanup.py  test_Seller.py  test_helpers.py
trading_scripts/: __init__.py  buy.py  helpers.py  screener.py  trailing_stop.py
(+53 files in other folders)
