[project]
name = "alpaca_trading_scripts"
description = "Python trading scripts"
authors = [
    "Erik Nielsen <erik@312development.com>"
]
license = "Apache-2.0"
readme = "README.md"
python = ">=3.9"
homepage = "https://github.com/nielse63/alpaca-trading-scripts"
repository = "https://github.com/nielse63/alpaca-trading-scripts"
documentation = "https://github.com/nielse63/alpaca-trading-scripts"
keywords = ["alpaca", "trading"]
classifiers = []

# Requirements
# [dependencies]
# Click = "^7.0"

# [dev-dependencies]
# black = { version = "^18.3-alpha.0", python = "^3.6" }

# [scripts]
# buy = "trading_scripts:buy"
# trailing_stop = "trading_scripts:trailing_stop"

[build-system]
requires = [
    "setuptools >= 57.2.0",
    "setuptools_scm >= 6.0.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "trading_scripts/__init__.py"

[tool.isort]
profile = "black"
src_paths = ["trading_scripts"]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = false

[tool.pytest.ini_options]
minversion = "6.2.4"
log_cli = true
addopts = "-ra -s --cov=trading_scripts --cov-report=xml --cov-report=html --cov-report=term --no-cov-on-fail"
testpaths = "tests"
markers = [
  "integration",
  "slow"
]

[tool.pytest-watch]
ignore = "./venv"

[tool.mypy]
python_version=3.9
platform="linux"
files="trading_scripts"
show_column_numbers=true
follow_imports="silent"
ignore_missing_imports=true
warn_no_return=true
warn_redundant_casts=true

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \venv
    | build
    | dist
    | __init__\.py
  )/
)
'''
